# http-server-in-c

./: CMakeLists.txt  README.md
src/: content_negotiation.c  content_negotiation.h  logger.c  logger.h  main.c  method_handler.c  method_handler.h  request.c  request.h  response_handler.c  response_handler.h  router.c  router.h  server.c  session.c  session.h  static_handler.c  static_handler.h
static/: about.html  index.html  styles.css
